# fused-effects-broker

./: CHANGELOG.md  README.md  fused-effects-broker.cabal
src/: FusedEffectsBroker.hs
src/Control/Carrier/Broker/: STM.hs
src/Control/Effect/: Broker.hs
test/: Spec.hs
